--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "sass": "^1.59.3"
+    "sass": "^1.59.3",
+    "stripe": "^11.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
