--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "axios": "^1.3.4",
     "babel-plugin-macros": "^3.1.0",
+    "cookies": "^0.8.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "mongoose": "^7.0.2",
